# paimon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  main.cpp
example/application/: main.cpp
example/application/asset/shader/: test.glsl
example/application_example/: main.cpp
example/asset_system/: main.cpp
example/command/: main.cpp
example/component/: CMakeLists.txt  main.cpp
example/compute_shader/: main.cpp
example/context/: main.cpp
example/damaged_helmet/: Untitled-1.txt  color_pass.cpp  color_pass.h  final_pass.cpp  final_pass.h  main.cpp  mesh_data.h  renderer.cpp  renderer.h  screen_quad.cpp  screen_quad.h
example/debug_message/: main.cpp
example/frame_graph/: main.cpp
example/framebuffer/: main.cpp  screen_quad.cpp  screen_quad.h
example/geometry/: main.cpp
example/hello_glog/: hello_glog.cpp
example/hello_world/: main.cpp
example/ibl/: main.cpp
example/material/: CMakeLists.txt  main.cpp
example/mesh/: CMakeLists.txt  main.cpp
example/process_shader/: main.cpp
example/query/: main.cpp
example/render_context/: main.cpp
example/render_system/: main.cpp
example/renderer/: CMakeLists.txt  main.cpp
example/resource_demo/: main.cpp
example/separate_program/: main.cpp
example/shader/: CMakeLists.txt  main.cpp
example/state/: main.cpp
example/texture/: CMakeLists.txt  main.cpp  shaderSource.h  vertexData.h
example/vao/: CMakeLists.txt  ShaderSource.h  VertexData.h  main.cpp
paimon/source/: CMakeLists.txt  pch.h
paimon/source/component/: Component.cpp  Component.h  ECS.h  Entity.cpp  Entity.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
paimon/source/control/: Input.cpp  Input.h  KeyCode.h
paimon/source/renderer/: Camera.cpp  Camera.h  Font.cpp  Font.h  Material.cpp  Material.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h  Pass.cpp  Pass.h  Shader.cpp  Shader.h  Technique.cpp  Technique.h  Texture2D.cpp  Texture2D.h  texture2d.cpp  texture2d.h
paimon/source/utility/: StopWatch.h
paimon/source/utils/: Application.cpp  Application.h  Log.cpp  Log.h  Macros.h  Screen.cpp  Screen.h
samples/hello_glog/: CMakeLists.txt  hello_glog.cpp
samples/hello_paimon/1.shader/: 1.shader.cpp  CMakeLists.txt  shader.vs
source/: CMakeLists.txt
source/paimon/: config.h.in
source/paimon/app/: application.cpp  application.h  input.cpp  input.h  key_code.h  layer.cpp  layer.h  mouse_code.h  window.cpp  window.h
source/paimon/app/event/: application_event.cpp  application_event.h  event.cpp  event.h  key_event.cpp  key_event.h  mouse_event.cpp  mouse_event.h
source/paimon/app/imgui/: imgui_layer.cpp  imgui_layer.h
source/paimon/app/panel/: editor_layer.cpp  editor_layer.h  ibl_panel.cpp  ibl_panel.h  interaction_layer.cpp  interaction_layer.h  menu_panel.cpp  menu_panel.h  scene_panel.cpp  scene_panel.h  viewport_panel.cpp  viewport_panel.h
source/paimon/asset/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  image.cpp  image.h  model.cpp  model.h  shader_source.cpp  shader_source.h
source/paimon/core/: hash.h  log_system.cpp  log_system.h  world.h
source/paimon/core/base/: macro.h
source/paimon/core/camera/: camera_controller.h  orbit_camera_controller.cpp  orbit_camera_controller.h
source/paimon/core/ecs/: README.md  components.cpp  components.h  entity.cpp  entity.h  scene.cpp  scene.h  system.h  world.cpp  world.h
source/paimon/core/fg/: frame_graph.cpp  frame_graph.h  frame_graph_blackboard.h  frame_graph_buffer.cpp  frame_graph_buffer.h  frame_graph_resources.h  frame_graph_texture.cpp  frame_graph_texture.h  graph_node.cpp  graph_node.h  pass.h  pass_node.cpp  pass_node.h  resource.h  resource_entry.h  resource_node.cpp  resource_node.h  transient_resources.cpp  transient_resources.h
source/paimon/core/io/: file.cpp  file.h  gltf.cpp  gltf.h  ibl.cpp  ibl.h  image.cpp  image.cpp_  image.h
source/paimon/core/log/: log_system.cpp  log_system.h
source/paimon/core/resource/: resource_manager.cpp  resource_manager.h
source/paimon/core/sg/: camera.cpp  camera.h  image.h  light.cpp  light.h  material.h  mesh.cpp  mesh.h  node.cpp  node.h  sampler.h  scene.cpp  scene.h  texture.h
source/paimon/opengl/: buffer.cpp  buffer.h  capability.cpp  capability.h  debug_message.cpp  debug_message.h  error.cpp  error.h  framebuffer.cpp  framebuffer.h  program.cpp  program.h  program_pipeline.cpp  program_pipeline.h  query.cpp  query.h  render_buffer.cpp  render_buffer.h  sampler.cpp  sampler.h  separate_program.cpp  separate_program.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  state.cpp  state.h  state_setting.h  state_tracker.cpp  state_tracker.h  texture.cpp  texture.h  type.h  vertex_array.cpp  vertex_array.h
source/paimon/opengl/base/: get.h  object.cpp  object.h
source/paimon/opengl/state/: color_blend.h  depth.h  depth_stencil.h  input_assembly.h  multi_sample.h  multisample.h  rasterization.h  scissor.h  stencil.h  tessellation.h  (+2 more)
source/paimon/platform/: context.cpp  context.h  context_factory.cpp  context_factory.h  context_format.h  window.cpp  window.h
source/paimon/rendering/: command.cpp  command.h  framebuffer_cache.cpp  framebuffer_cache.h  graphics_pipeline.cpp  graphics_pipeline.h  render_context.cpp  render_context.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  rendering_info.h  shader_define.cpp  shader_define.h  shader_includer.cpp  shader_includer.h  shader_manager.cpp  shader_manager.h  shader_preprocessor.cpp  shader_preprocessor.h  shader_program_cache.cpp  shader_program_cache.h  shader_source.cpp  shader_source.h  shader_template.cpp  shader_template.h  shader_variant.cpp  shader_variant.h  vertex_array_cache.cpp  vertex_array_cache.h
source/paimon/utility/: brdf_lut_pass.cpp  brdf_lut_pass.h  equirectangular_to_cubemap_pass.cpp  equirectangular_to_cubemap_pass.h  ibl_sampler.cpp  ibl_sampler.h  irradiance_map_pass.cpp  irradiance_map_pass.h  prefiltered_map_pass.cpp  prefiltered_map_pass.h
(+87 files in other folders)
