function(add_example FOLDER_NAME)
    set(EXAMPLE_NAME ${FOLDER_NAME})
    file(GLOB_RECURSE SOURCE_FILES ${FOLDER_NAME}/*.cpp ${FOLDER_NAME}/*.h)
    add_executable(${EXAMPLE_NAME} ${SOURCE_FILES})
    target_link_libraries(${EXAMPLE_NAME} PRIVATE paimon)
endfunction()

add_example(hello_world)
add_example(texture)
add_example(framebuffer)
add_example(query)
add_example(separate_program)
add_example(debug_message)
add_example(state)
add_example(context)
add_example(geometry)
add_example(compute_shader)